src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Tertiary_Category_Group__c</fullName>
        <label>Tertiary Category Group</label>
        <picklist>
            <controllingField>Tertiary_Category_Area__c</controllingField>
            <picklistValues>
                <fullName>Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Procurement &amp; Telecoms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D Subcontracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing, Manufacturing &amp; Measurement Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel &amp; Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Incubation &amp; e2e Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Manufacturing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM/ODM/JDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optical components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semiconductor and RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Workforce Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting Telecom Implementation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting MS, NPO &amp; SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting Other NI Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tertiary_Category__c</fullName>
        <label>Tertiary Category</label>
        <picklist>
            <controllingField>Tertiary_Category_Group__c</controllingField>
            <picklistValues>
                <fullName>Building investment/CAPEX without Rents and Leases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Management services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental/Lease/Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure Services &amp; Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workplace Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associated Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coaching &amp; Other Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial, Tax &amp; Insurances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal &amp; Intellectual Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; Communications Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Test Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Peripheral Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Auxiliaries and Consumables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Test Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Incubation Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_SPE_score__c</fullName>
        <label>Total SPE score</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <label>Total Risk Assesment Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Ideas__c</fullName>
        <label>Total # of Ideas</label>
        <summaryFilterItems>
            <field>GIM__c.Status__c</field>
            <operation>equals</operation>
            <value>Already Known, Community Discussion, HOT, Implementation Done, Implementation Started, Implementation Stopped, Jewel, On Hold, Rejected, Stake Holder Assessment</value>
        </summaryFilterItems>
        <summaryForeignKey>GIM__c.Supplier__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>of_Open_Ideas__c</fullName>
        <label># of Open Ideas</label>
        <summaryFilterItems>
            <field>GIM__c.Status__c</field>
            <operation>equals</operation>
            <value>Community Discussion, HOT, Jewel, Stake Holder Assessment</value>
        </summaryFilterItems>
        <summaryForeignKey>GIM__c.Supplier__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Rejected_Ideas__c</fullName>
        <label># of Rejected Ideas</label>
        <summaryFilterItems>
            <field>GIM__c.Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>GIM__c.Supplier__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>ALL_Enterprise_ID</fullName>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SPE_Parent_Account_Check__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>ALL Enterprise ID</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SPE_Parent_Account_Check__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Suppliers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Currency_is_Not_Editable</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISCHANGED(CurrencyIsoCode),
NOT(ISNEW()), 
OR($Profile.Name = &quot;Supplier Manager&quot;, $Profile.Name = &quot;General Management Role&quot;, $Profile.Name = &quot;Executive&quot;, $Profile.Name = &quot;Key Users&quot;) 
)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Supplier Currency can not be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Name_is_Not_Editable</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED(Name),
NOT(ISNEW()), 
OR($Profile.Name = &quot;Supplier Manager&quot;, $Profile.Name = &quot;General Management Role&quot;, $Profile.Name = &quot;Executive&quot;, $Profile.Name = &quot;Key Users&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Supplier Name can not be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LSM_is_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(ISBLANK(  LSM__c ), ISNULL(LSM__c)), 
 OR($Profile.Name = &quot;Supplier Manager&quot;, $Profile.Name = &quot;Key Users&quot;, $Profile.Name = &quot;General Management Role&quot;, $Profile.Name = &quot;Executive&quot;))</errorConditionFormula>
        <errorDisplayField>LSM__c</errorDisplayField>
        <errorMessage>Lead Supplier Manager is Mandatory field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_LSM_can_edit_record</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IF(ISCHANGED( LSM__c ),$User.Id !=  PRIORVALUE(LSM__c),$User.Id !=  LSM__r.Id), NOT(ISNEW()),
OR($Profile.Name = &quot;Supplier Manager&quot;, $Profile.Name = &quot;General Management Role&quot;, $Profile.Name = &quot;Executive&quot;)
)</errorConditionFormula>
        <errorMessage>You are not authorized to edit record. Only LSM can edit the record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Secondary_Category_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
	NOT(ISPICKVAL( Secondary_Category_Area__c , &apos;&apos;)),
	OR
	(
	(ISPICKVAL( Secondary_Category_Group__c , &apos;&apos;)),
	(ISPICKVAL( Secondary_Category__c, &apos;&apos;))
	),
OR($Profile.Name = &quot;Supplier Manager&quot;, $Profile.Name = &quot;Key Users&quot;, $Profile.Name = &quot;General Management Role&quot;, $Profile.Name = &quot;Executive&quot;)
)</errorConditionFormula>
        <errorDisplayField>Secondary_Category_Area__c</errorDisplayField>
        <errorMessage>Secondary Category Group &amp; Secondary  Category cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tertiary_Category_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
	NOT(ISPICKVAL( Tertiary_Category_Area__c , &apos;&apos;)),
	OR
	(
	(ISPICKVAL( Tertiary_Category_Group__c , &apos;&apos;)),
	(ISPICKVAL( Tertiary_Category__c, &apos;&apos;))
	),
OR($Profile.Name = &quot;Supplier Manager&quot;, $Profile.Name = &quot;Key Users&quot;, $Profile.Name = &quot;General Management Role&quot;, $Profile.Name = &quot;Executive&quot;)
)</errorConditionFormula>
        <errorDisplayField>Tertiary_Category_Area__c</errorDisplayField>
        <errorMessage>Tertiary Category Group &amp; Tertiary Category cannot be empty</errorMessage>
    </validationRules>
</CustomObject>